; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgcrypto.c_find_provider.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_pgcrypto.c_find_provider.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INVALID_PARAMETER_VALUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Cannot use \22%s\22: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32 (i8*, i8**)*, i8*, i32)* @find_provider to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @find_provider(i32* %0, i32 (i8*, i8**)* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32 (i8*, i8**)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 (i8*, i8**)* %1, i32 (i8*, i8**)** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @VARDATA_ANY(i32* %12)
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @VARSIZE_ANY_EXHDR(i32* %14)
  %16 = call i8* @downcase_truncate_identifier(i32 %13, i32 %15, i32 0)
  store i8* %16, i8** %10, align 8
  %17 = load i32 (i8*, i8**)*, i32 (i8*, i8**)** %6, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = call i32 %17(i8* %18, i8** %9)
  store i32 %19, i32* %11, align 4
  %20 = load i32, i32* %11, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %34

22:                                               ; preds = %4
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %34, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* @ERROR, align 4
  %27 = load i32, i32* @ERRCODE_INVALID_PARAMETER_VALUE, align 4
  %28 = call i32 @errcode(i32 %27)
  %29 = load i8*, i8** %10, align 8
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @px_strerror(i32 %30)
  %32 = call i32 @errmsg(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %29, i32 %31)
  %33 = call i32 @ereport(i32 %26, i32 %32)
  br label %34

34:                                               ; preds = %25, %22, %4
  %35 = load i8*, i8** %10, align 8
  %36 = call i32 @pfree(i8* %35)
  %37 = load i32, i32* %11, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %34
  br label %42

40:                                               ; preds = %34
  %41 = load i8*, i8** %9, align 8
  br label %42

42:                                               ; preds = %40, %39
  %43 = phi i8* [ null, %39 ], [ %41, %40 ]
  ret i8* %43
}

declare dso_local i8* @downcase_truncate_identifier(i32, i32, i32) #1

declare dso_local i32 @VARDATA_ANY(i32*) #1

declare dso_local i32 @VARSIZE_ANY_EXHDR(i32*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i8*, i32) #1

declare dso_local i32 @px_strerror(i32) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
